# crashout-submit

./: README.md  compose.yaml
data-dl/: entrypoint.sh
data-dl/scripts/: get-all.sh  get-crashes.sh  get-map.sh  utils-map.sh  utils.sh
dockerfiles/geo/: Dockerfile
dockerfiles/pather/: CMakeLists.txt  Dockerfile
dockerfiles/pather/include/: Graph.hpp  GraphHelper.hpp
dockerfiles/pather/src/: Graph.cpp  GraphHelper.cpp  main.cpp
geo-convert/: entrypoint.py
nginx/config/: nginx.conf
nginx/site/: index.html
pathbuilder/: entrypoint.py
pathbuilder/scripts/: crash_util.py  osm_info.py  osm_parser.py  path_builder.py
style-dl/: entrypoint.sh
style-dl/patches/: 01-remove-metadata.jq  02-update-metadata.jq  03-add-map-source.jq  04-add-placeholder-route.jq  05-add-crashes.jq
style-dl/scripts/: get-all.sh  get-fonts.sh  get-style.sh  utils-style.sh  utils.sh
tilemaker/: entrypoint.sh
tippecanoe/: entrypoint.sh
